--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h2>Tutorial AWS</h2>
+        <h2>procedimiento de instalacion de una instacia en aws</h2>
     </header>
     <main>
         <h4> Primer etapa crear una instancia en aws </h4>
